# HW_2_13_Django

./: .env.example  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
hw10/: settings.py
quotes/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_author_is_active.py
quotes/scheduler/: runapscheduler.py
quotes/services/: gtp_service.py
quotes/static/quotes/: style.css
quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  authors.html  base.html  base_real.html  edit_author.html  index.html
users/: forms.py  urls.py  views.py
users/templates/users/: login.html  logout.html  register.html
utils/: add_quotes_to_mongo.py  authors.json  migration.bat  migration.py
