[tool.poetry]
name = "hw-2-10"
version = "0.1.0"
description = ""
authors = ["Vitalii Bielimov <vbit2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
pymongo = "^4.6.2"
setuptools = "^69.1.1"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
django-environ = "^0.11.2"
django-apscheduler = "^0.6.2"
openai = "^1.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
